# openvpn-xor-patch

./: .gitignore  CMakeLists.txt  README.md  apply_patch_and_build.ps1  rebuild.ps1
.github/workflows/: build.yaml
include/: openvpn-plugin.h  tap-windows.h
src/openvpn/: CMakeLists_scramble.txt  init.c  options.c  options.h  scramble.c  scramble.h  socket.c  socket.h
